kubernetes/apps/default/discord-bots/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: discord-bots-egress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: discord-bots
  egress:
    - toFQDNs:
        - matchName: discord.com
        - matchName: gateway.discord.gg
      toPorts:
        - ports:
            - port: "443"
